fluxcd/apps/overlays/production/monica/statefulset-app-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: monica
spec:
  replicas: 1
  template:
    metadata:
      labels:
        policy.prplanit.com/ingress: "true"
    spec:
      containers:
        - name: nginx
          image: docker.io/nginx:1.31.6-alpine
        - name: monica
          image: docker.io/monica:4.1.2-fpm-alpine
          volumeMounts:
            - name: pedestal-of-time-monica-data
              mountPath: /var/www/html/storage
            - name: app-files
              mountPath: /var/www/html
  volumeClaimTemplates:
    - metadata:
        name: pedestal-of-time-monica-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ceph-rbd-retain
        resources:
          requests:
            storage: 10Gi
