fluxcd/apps/overlays/production/monica/service-app-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: monica
  annotations:
    lbipam.cilium.io/ips: "172.22.30.124"
    lbipam.cilium.io/sharing-key: "pedestal-of-time"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    service.cilium.io/loadbalancer-mode: "dsr"
spec:
  type: LoadBalancer
