fluxcd/apps/overlays/production/monica/service-monica-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: monica
  labels:
    policy.prplanit.com/ingress: "true"
