fluxcd/apps/overlays/production/monica/httproute-xylem.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monica-xylem
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Private Apps (Pedestal of Time⚔️)"
      conditions:
        - "[STATUS] == any(200, 302)"
        - "[BODY] != pat(*Fairer Pages*)"
        - "[RESPONSE_TIME] < 5000"
spec:
  parentRefs:
    - name: phloem-gateway
      namespace: arylls-lookout
  hostnames:
    - "monica.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: monica
          port: 80
